2006-01-13  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #271541
	* calendar.error.xml: Added a new message for displaying 
	error message while trying to create a new event in read only
	calendars
	* gui/e-calendar-view.c: (e_calendar_view_new_appointment_for):
	Run the error dialog using the message.

2006-01-13  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #326735
	* gui/dialogs/event-page.c: (event_page_fill_widgets): If
	the user is not the organizer, set the orignal organizer in
	the combobox and make it non-editable.

2006-01-12  Srinivasa Ragavan  <sragavan@novell.com>

	* gui/GNOME_Evolution_Calendar.server.in.in:

	Changes accels for Calendar (C+F3 -> C+3), Tasks (C+F4 ->C+4) and
	Memo (C+F6 to C+5).

2006-01-12  Harish Krishnaswamy  <kharish@novell.com>

	* gui/gnome-cal.c: (gnome_calendar_class_init):
	Re-define keyboard shortcuts for switching between views.
	UI Hackfest - Refer http://go-evolution.org/Shortcut_Keys_Review

2006-01-10  Simon Zheng  <simon.zheng@sun.com>

	* gui/calendar-component.c: (calendar_component_peek): 
	* gui/calendar-config.c:
	* gui/e-cal-model-tasks.c:
	* gui/e-cal-popup.c:
	* gui/e-cell-date-edit-text.c:
	* gui/e-meeting-store.c:
	* gui/memos-component.c: (memos_component_peek):
	* gui/print.c:
	* gui/tasks-component.c: (tasks_component_peek):
	Use e_util_mkdir_hier() instead of e_mkdir_hier().

        Use e_util_strstrcase() instead of e_strstrcasea().
    
        use e_strftime() in evolution-data-server/
        libedataserver/e-data-server-util.c instead of the copy in 
        evolution/e-util/e-util.c.
 
 	use e_filename_make_safe() in evolution-data-server/
        libedataserver/e-data-server-util.c instead of the copy in 
        evolution/e-util/e-util.c.
        
        use e_utf8_strftime() in evolution-data-server/
        libedataserver/e-data-server-util.c instead of the copy in 
        evolution/e-util/e-util.c.

2006-01-08  Tor Lillqvist  <tml@novell.com>
